full image alignment fix

--- a/src/styles/image.module.css
+++ b/src/styles/image.module.css
@@ -2,6 +2,7 @@
     width: 100%;
     max-width: 1600px;
     margin: 0 auto;
+    text-align: center;
 }
 
 
